--- a/src/components/Tictactoe/Game/Templates/DesktopGame/DesktopGame.css
+++ b/src/components/Tictactoe/Game/Templates/DesktopGame/DesktopGame.css
@@ -1,9 +1,15 @@
 /* Desktop layout specific styles */
 
+/* Main game container for large screens (laptop, large tablets, desktops etc.) */
+.t3-box--desk {
+    padding: 0.625rem; /* 10px */
+}
+
 /* Game layout container with two columns */
 .t3-layout--2-columns {
+    /*margin: 0.625rem;*/ /* 10px */
     flex-direction: row;
-    gap: 1.25rem; /* 20px = 1.25rem. Space between columns */
+    gap: 0.625rem; /* 10px = 0.625rem. Space between columns */
 }
 
 /* Left column */
@@ -37,6 +43,10 @@
 
 /* GAME STATUS */
 /* For all statuses */
+.t3-layout__right .t3-status-wrapper {
+    margin-bottom: 0.625rem; /* 10px = 0.625rem */
+}
+
 .t3-layout__right .t3-status {
     border-radius: 0.3125rem; /* 5px = 0.3125rem */
 }
@@ -68,7 +78,7 @@
 @media (min-height: 481px) or (min-width: 769px) {
     /** GAME INFO **/
     .t3-layout__game-info  {
-        padding: 1.25rem; /* 1.25rem = 20px */
+        padding: 0.625rem; /* 0.625rem = 10px */
     }
 }
 
@@ -79,12 +89,12 @@
     /** Horizontal controls (game controls and stopwatch) on the left side of the layout **/
     .t3-layout__left .horiz-controls,
     .t3-layout__left .horiz-controls .row-cont {
-        gap: 10px;
+        gap: 0.625rem; /* 10px = 0.625rem */
     }
 
     /** GAME INFO **/
     .t3-layout__game-info  {
-        padding: 0.625rem;
+        padding: 0.625rem; /* 10px = 0.625rem */
     }
 
     /** GAME STOPWATCH **/
@@ -93,29 +103,25 @@
     }
 
     .t3-layout__left-stopwatch .time-viewer {
-        gap: 0.5rem;
+        gap: 0.5rem; /* 8px = 0.5rem */
     }
 
     .t3-layout__left-stopwatch .time-separator {
-        font-size: 1.2rem;
-        top: 0.3rem;
+        font-size: 1.25rem; /* 20px = 1.25rem */
+        top: 0.3125rem; /* 5px = 0.3125rem */
     }
 
     .t3-layout__left-stopwatch .value {
-        font-size: 1.2rem;
-        width: 2rem;
-        height: 2rem;
+        font-size: 1.25rem; /* 20px = 1.25rem */
+        width: 2rem; /* 32px = 2rem */
+        height: 2rem; /* 32px = 2rem */
     }
 
     .t3-layout__left-stopwatch .label {
-        font-size: 0.6rem;
+        font-size: 0.625rem; /* 10px = 0.625rem */
     }
 
     /** GAME STATUS **/
-    .t3-layout__right .t3-status-wrapper {
-        margin-bottom: 0.625rem;
-    }
-
     .t3-layout__right .t3-status__body {
         font-size: 1.0625rem; /* 17px = 1.0625rem */
     }
@@ -123,12 +129,12 @@
     /** HISTORY MOVES **/
     .t3-layout__right-moves .history-list li {
         padding: 0.4rem 1rem 0.4rem 2.5rem;
-        font-size: 12px; /* 12px = 0.75rem */
+        font-size: 0.75rem; /* 12px = 0.75rem */
     }
 
     /* Moves controls (sort and navigation) **/
     .t3-layout__right .moves-sort-bar {
-        padding: 0.3125rem;
+        padding: 0.3125rem; /* 5px = 0.3125rem */
     }
 
     .t3-layout__right-moves .sort-label {
