--- a/src/components/Tictactoe/Game/Templates/MobileGame/MobileGame.css
+++ b/src/components/Tictactoe/Game/Templates/MobileGame/MobileGame.css
@@ -1,5 +1,11 @@
 
 /* Mobile layout specific styles */
+
+/* Main game container for compact screens (mobiles, tablets etc.) */
+.t3-box--mob {
+    padding: 0.3125rem; /* 5px */
+}
+
 .t3-layout--1-column {
     flex-direction: column;
     gap: 0.3125rem; /* 5px = 0.3125rem. Space between columns */
@@ -12,10 +18,6 @@
 }
 
 /* GAME STATUS */
-.t3-layout--1-column .t3-status-wrapper {
-    margin: 0.125rem 0; /* 2px = 0.125rem */
-}
-
 /* For all game statuses */
 .t3-layout--1-column .t3-status {
     border-radius: 0.375rem 0; /* 0.375rem = 6px */
